2007-11-09  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/src/alpha.hg: added missing get_alpha() function
	* clutter/src/Makefile_list_of_hg.am_fragment:
	* clutter/src/behaviour.ccg:
	* clutter/src/behaviour.hg:
	* clutter/src/clutter_vfuncs.defs:
	* tools/m4/convert_cluttermm.m4: added initial wrapper for Behavior

2007-11-09  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/src/Makefile_list_of_hg.am_fragment:
	* clutter/src/alpha.ccg:
	* clutter/src/alpha.hg: added initial wrapper for ClutterAlpha
	* clutter/src/timeline.hg: made Timeline only accessible via RefPtr

2007-11-08  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/src/container.hg: added refreturn to some functions
	* clutter/src/group.hg: added refreturn to some functions
	* clutter/src/stage.hg: added refreturn to some functions
	* examples/test-boxes.cc: connected the signal handlers, so the full
	functionality of the C demo is now working (although there are some things
	in the example which aren't wrapped yet).

2007-11-08  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/src/color.ccg:
	* clutter/src/color.hg: I had forgotten to add an rgb constructor, which is
	the most common case and corresponds to the C use:
	ClutterColor color = { 0, 0, 0, 255};
	This means that we can't have a constructor for hls, because they would be
	the same signature.  So I removed the hls and hlsx constructors.  If you
	want to set a color via hls, you'll need to construct it and then call
	Color::set_from_hls() instead.  I also added getters/setters for all of the
	individual red/green/blue/alpha values and one setter for all of them at
	once. This API might still need a bit more thought to make it more natural
	* examples/test-boxes.cc: updated for the new color API

2007-11-08  Murray Cumming  <murrayc@murrayc.com>

	* clutter/src/actor.hg: Use the new _DERIVES_INITIALLY_UNOWNED 
	gmmproc macro from the latest glibmm from svn.
	* examples/test-boxes.cc: Remove the extra reference() calls. These 